# Unearth

./: .gitignore  .mcp.json  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PERFORMANCE.md  README.md  RELEASING.md  install.sh  release-please-config.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release-please.yml  release.yml
benches/: recovery.rs
examples/: heap_profile.rs
skills/custom-carver/: SKILL.md
src/: apfs.rs  bcachefs.rs  befs.rs  btrfs.rs  carver.rs  cli.rs  cramfs.rs  custom.rs  encrypted.rs  erofs.rs  exfat.rs  ext4.rs  f2fs.rs  fat.rs  gfs2.rs  hash.rs  hfs.rs  hfsplus.rs  identify.rs  image.rs  iso9660.rs  jfs.rs  job.rs  json.rs  lib.rs  lvm.rs  main.rs  manifest.rs  mcp.rs  mdraid.rs  minix.rs  nilfs2.rs  ntfs.rs  ocfs2.rs  partition.rs  recover.rs  refs.rs  reiserfs.rs  romfs.rs  signatures.rs  (+8 more)
tests/: aac_signatures_test.rs  align_test.rs  apfs_test.rs  apm_test.rs  ar_signatures_test.rs  blend_signatures_test.rs  btrfs_test.rs  capture_signatures_test.rs  carve_test.rs  carver_fuzz_test.rs  cfbf_signatures_test.rs  cli_test.rs  coverage_test.rs  cpio_test.rs  custom_carver_test.rs  dedup_test.rs  dex_signatures_test.rs  djvu_signatures_test.rs  dry_run_test.rs  dryrun_test.rs  encrypted_test.rs  eps_signatures_test.rs  evtx_signatures_test.rs  exfat_test.rs  ext4_journal_test.rs  ext4_test.rs  extra_signatures_test.rs  fat_test.rs  font_signatures_test.rs  free_space_test.rs  gif_walk_test.rs  glb_signatures_test.rs  gpt_test.rs  hfsplus_test.rs  icc_signatures_test.rs  iff_signatures_test.rs  iso9660_test.rs  j2k_signatures_test.rs  jpeg_thumbnail_test.rs  kitchen_sink_test.rs  (+41 more)
tests/common/: mod.rs
