[package]
name = "filerecovery"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Recover deleted files from SD cards, hard drives, and disk images by signature-based file carving."
license = "MIT"
readme = "README.md"
repository = "https://github.com/MarcelRoozekrans/FileRecovery"
keywords = ["recovery", "forensics", "carving", "undelete", "data-recovery"]
categories = ["command-line-utilities", "filesystem"]

[[bin]]
name = "filerecovery"
path = "src/main.rs"

[lib]
name = "filerecovery"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
indicatif = "0.17"
# Optional heap profiler (dotMemory-style allocation reports). Enable with
# `--features dhat-heap` when running the `heap_profile` example.
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1

# Allow the profiling example to see useful symbols/line info under release.
[profile.profiling]
inherits = "release"
debug = 1
