[package]
name = "unearth"
version = "0.4.0"
edition = "2021"
rust-version = "1.75"
description = "A dependency-light, read-only data-recovery & disk-forensics toolkit in Rust: filesystem-aware undelete (FAT/exFAT/NTFS/ext/HFS+), signature carving of 150+ formats, whole-filesystem & lost-partition recovery, and bad-sector imaging. Scriptable or agent-driven via MCP."
license = "MIT"
readme = "README.md"
repository = "https://github.com/MarcelRoozekrans/unearth"
keywords = ["recovery", "forensics", "carving", "undelete", "data-recovery"]
categories = ["command-line-utilities", "filesystem"]
# Keep the published crate to the Rust sources and docs; the Claude Code plugin,
# skills, installer, and CI live in the repo but aren't part of the package.
exclude = [".github", ".claude-plugin", "skills", ".mcp.json", "install.sh"]

# cargo-binstall: fetch the prebuilt binary the release workflow attaches to each
# GitHub Release (asset name: unearth-v<version>-<target>.<ext>) instead of
# compiling from source.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[[bin]]
name = "unearth"
path = "src/main.rs"

[lib]
name = "unearth"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
indicatif = "0.17"
# Optional heap profiler (dotMemory-style allocation reports). Enable with
# `--features dhat-heap` when running the `heap_profile` example.
dhat = { version = "0.3", optional = true }

[features]
dhat-heap = ["dep:dhat"]

[dev-dependencies]
tempfile = "3"
# Statistical micro-benchmarking (the BenchmarkDotNet analogue). Console-only
# (no plotting deps) to stay light; run with `cargo bench`.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "recovery"
harness = false

[profile.release]
lto = true
codegen-units = 1

# Allow the profiling example to see useful symbols/line info under release.
[profile.profiling]
inherits = "release"
debug = 1
